--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://nodachizi.github.io/finalProjectwork",
+  "homepage": "http://nodachizi.github.io/codeplp",
   "name": "react-material-dashboard",
   "version": "1.0.0",
   "private": true,
