--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://nodachizi.github.io/codeplp",
+  "homepage": "http://nodachizi.github.io/smartframsf",
   "name": "react-material-dashboard",
   "version": "1.0.0",
   "private": true,
@@ -32,6 +32,7 @@
     "@material-ui/core": "^5.0.0-alpha.28",
     "@material-ui/icons": "^5.0.0-alpha.28",
     "@material-ui/styles": "^4.10.0",
+    "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
     "formik": "^2.1.5",
